insert/sintatic/c.output
Terminals unused in grammar

   INT
   SELECT
   FROM
   WHERE
   DATE


Gramática

    0 $accept: input $end

    1 input: exp

    2 exp: INSERT INTO insert_in

    3 insert_in: table_name

    4 ident: ID

    5 column: ID

    6 table_name: ident columns

    7 $@1: /* vazio */

    8 columns: $@1 insertOrder

    9 $@2: /* vazio */

   10 columns: $@2 '(' column_names ')' insertOrder

   11 column_names: column
   12             | column column_plus

   13 column_plus: ',' column_names

   14 $@3: /* vazio */

   15 insertOrder: VALUES $@3 insertStart

   16 $@4: /* vazio */

   17 insertStart: '(' insertValues ')' $@4 continue

   18 insertValues: type
   19             | type values_plus

   20 values_plus: ',' insertValues

   21 $@5: /* vazio */

   22 continue: ',' $@5 insertStart
   23         | ';'

   24 type: NUM
   25     | STRING_LITERAL
   26     | ID '.' ID
   27     | PONTOFLUTUANTE
   28     | BOOL
   29     | CHAR


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 10 17
')' (41) 10 17
',' (44) 13 20 22
'.' (46) 26
';' (59) 23
error (256)
INT (258)
INSERT (259) 2
INTO (260) 2
NUM (261) 24
PONTOFLUTUANTE (262) 27
VALUES (263) 15
SELECT (264)
FROM (265)
BOOL (266) 28
WHERE (267)
ID (268) 4 5 26
CHAR (269) 29
DATE (270)
STRING_LITERAL (271) 25
LOWERTHANCOMMA (272)
COMMA (273)


Não-terminais com as regras onde eles aparecem

$accept (24)
    à esquerda: 0
input (25)
    à esquerda: 1, à direita: 0
exp (26)
    à esquerda: 2, à direita: 1
insert_in (27)
    à esquerda: 3, à direita: 2
ident (28)
    à esquerda: 4, à direita: 6
column (29)
    à esquerda: 5, à direita: 11 12
table_name (30)
    à esquerda: 6, à direita: 3
columns (31)
    à esquerda: 8 10, à direita: 6
$@1 (32)
    à esquerda: 7, à direita: 8
$@2 (33)
    à esquerda: 9, à direita: 10
column_names (34)
    à esquerda: 11 12, à direita: 10 13
column_plus (35)
    à esquerda: 13, à direita: 12
insertOrder (36)
    à esquerda: 15, à direita: 8 10
$@3 (37)
    à esquerda: 14, à direita: 15
insertStart (38)
    à esquerda: 17, à direita: 15 22
$@4 (39)
    à esquerda: 16, à direita: 17
insertValues (40)
    à esquerda: 18 19, à direita: 17 20
values_plus (41)
    à esquerda: 20, à direita: 19
continue (42)
    à esquerda: 22 23, à direita: 17
$@5 (43)
    à esquerda: 21, à direita: 22
type (44)
    à esquerda: 24 25 26 27 28 29, à direita: 18 19


estado 0

    0 $accept: . input $end

    INSERT  deslocar, e ir ao estado 1

    input  ir ao estado 2
    exp    ir ao estado 3


estado 1

    2 exp: INSERT . INTO insert_in

    INTO  deslocar, e ir ao estado 4


estado 2

    0 $accept: input . $end

    $end  deslocar, e ir ao estado 5


estado 3

    1 input: exp .

    $padrão  reduzir usando a regra 1 (input)


estado 4

    2 exp: INSERT INTO . insert_in

    ID  deslocar, e ir ao estado 6

    insert_in   ir ao estado 7
    ident       ir ao estado 8
    table_name  ir ao estado 9


estado 5

    0 $accept: input $end .

    $padrão  aceitar


estado 6

    4 ident: ID .

    $padrão  reduzir usando a regra 4 (ident)


estado 7

    2 exp: INSERT INTO insert_in .

    $padrão  reduzir usando a regra 2 (exp)


estado 8

    6 table_name: ident . columns

    '('       reduzir usando a regra 9 ($@2)
    $padrão  reduzir usando a regra 7 ($@1)

    columns  ir ao estado 10
    $@1      ir ao estado 11
    $@2      ir ao estado 12


estado 9

    3 insert_in: table_name .

    $padrão  reduzir usando a regra 3 (insert_in)


estado 10

    6 table_name: ident columns .

    $padrão  reduzir usando a regra 6 (table_name)


estado 11

    8 columns: $@1 . insertOrder

    VALUES  deslocar, e ir ao estado 13

    insertOrder  ir ao estado 14


estado 12

   10 columns: $@2 . '(' column_names ')' insertOrder

    '('  deslocar, e ir ao estado 15


estado 13

   15 insertOrder: VALUES . $@3 insertStart

    $padrão  reduzir usando a regra 14 ($@3)

    $@3  ir ao estado 16


estado 14

    8 columns: $@1 insertOrder .

    $padrão  reduzir usando a regra 8 (columns)


estado 15

   10 columns: $@2 '(' . column_names ')' insertOrder

    ID  deslocar, e ir ao estado 17

    column        ir ao estado 18
    column_names  ir ao estado 19


estado 16

   15 insertOrder: VALUES $@3 . insertStart

    '('  deslocar, e ir ao estado 20

    insertStart  ir ao estado 21


estado 17

    5 column: ID .

    $padrão  reduzir usando a regra 5 (column)


estado 18

   11 column_names: column .
   12             | column . column_plus

    ','  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 11 (column_names)

    column_plus  ir ao estado 23


estado 19

   10 columns: $@2 '(' column_names . ')' insertOrder

    ')'  deslocar, e ir ao estado 24


estado 20

   17 insertStart: '(' . insertValues ')' $@4 continue

    NUM             deslocar, e ir ao estado 25
    PONTOFLUTUANTE  deslocar, e ir ao estado 26
    BOOL            deslocar, e ir ao estado 27
    ID              deslocar, e ir ao estado 28
    CHAR            deslocar, e ir ao estado 29
    STRING_LITERAL  deslocar, e ir ao estado 30

    insertValues  ir ao estado 31
    type          ir ao estado 32


estado 21

   15 insertOrder: VALUES $@3 insertStart .

    $padrão  reduzir usando a regra 15 (insertOrder)


estado 22

   13 column_plus: ',' . column_names

    ID  deslocar, e ir ao estado 17

    column        ir ao estado 18
    column_names  ir ao estado 33


estado 23

   12 column_names: column column_plus .

    $padrão  reduzir usando a regra 12 (column_names)


estado 24

   10 columns: $@2 '(' column_names ')' . insertOrder

    VALUES  deslocar, e ir ao estado 13

    insertOrder  ir ao estado 34


estado 25

   24 type: NUM .

    $padrão  reduzir usando a regra 24 (type)


estado 26

   27 type: PONTOFLUTUANTE .

    $padrão  reduzir usando a regra 27 (type)


estado 27

   28 type: BOOL .

    $padrão  reduzir usando a regra 28 (type)


estado 28

   26 type: ID . '.' ID

    '.'  deslocar, e ir ao estado 35


estado 29

   29 type: CHAR .

    $padrão  reduzir usando a regra 29 (type)


estado 30

   25 type: STRING_LITERAL .

    $padrão  reduzir usando a regra 25 (type)


estado 31

   17 insertStart: '(' insertValues . ')' $@4 continue

    ')'  deslocar, e ir ao estado 36


estado 32

   18 insertValues: type .
   19             | type . values_plus

    ','  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 18 (insertValues)

    values_plus  ir ao estado 38


estado 33

   13 column_plus: ',' column_names .

    $padrão  reduzir usando a regra 13 (column_plus)


estado 34

   10 columns: $@2 '(' column_names ')' insertOrder .

    $padrão  reduzir usando a regra 10 (columns)


estado 35

   26 type: ID '.' . ID

    ID  deslocar, e ir ao estado 39


estado 36

   17 insertStart: '(' insertValues ')' . $@4 continue

    $padrão  reduzir usando a regra 16 ($@4)

    $@4  ir ao estado 40


estado 37

   20 values_plus: ',' . insertValues

    NUM             deslocar, e ir ao estado 25
    PONTOFLUTUANTE  deslocar, e ir ao estado 26
    BOOL            deslocar, e ir ao estado 27
    ID              deslocar, e ir ao estado 28
    CHAR            deslocar, e ir ao estado 29
    STRING_LITERAL  deslocar, e ir ao estado 30

    insertValues  ir ao estado 41
    type          ir ao estado 32


estado 38

   19 insertValues: type values_plus .

    $padrão  reduzir usando a regra 19 (insertValues)


estado 39

   26 type: ID '.' ID .

    $padrão  reduzir usando a regra 26 (type)


estado 40

   17 insertStart: '(' insertValues ')' $@4 . continue

    ','  deslocar, e ir ao estado 42
    ';'  deslocar, e ir ao estado 43

    continue  ir ao estado 44


estado 41

   20 values_plus: ',' insertValues .

    $padrão  reduzir usando a regra 20 (values_plus)


estado 42

   22 continue: ',' . $@5 insertStart

    $padrão  reduzir usando a regra 21 ($@5)

    $@5  ir ao estado 45


estado 43

   23 continue: ';' .

    $padrão  reduzir usando a regra 23 (continue)


estado 44

   17 insertStart: '(' insertValues ')' $@4 continue .

    $padrão  reduzir usando a regra 17 (insertStart)


estado 45

   22 continue: ',' $@5 . insertStart

    '('  deslocar, e ir ao estado 20

    insertStart  ir ao estado 46


estado 46

   22 continue: ',' $@5 insertStart .

    $padrão  reduzir usando a regra 22 (continue)
